# Agent_Algorithms

./: .gitignore  ALGORITMOS_TEST.md  README.md  langgraph.json  main.py  md.txt  plot_graph.py  pyproject.toml  requirements.txt  test.py  test_comprehensive.py  test_merge_with_merge_function.py  test_recurrence_builder.py  test_recursive_pipeline.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
app/: api.py  constants.py
app/agents/: graph.py  planner.py  state.py
app/agents/llms/: gemini.py  geminiWithTools.py
app/agents/nodes/: __init__.py  ast_json.py  ast_node.py  ast_tool_node.py  code_description.py  costs.py  costs_json.py  generate_pseudo.py  initial_decision.py  iterativo_espacial.py  iterativo_temporal.py  normalize.py  parse_nl_code.py  recurrence.py  recursivo_espacial.py  recursivo_recurrence.py  recursivo_temporal.py  result.py  route_complexity.py  solve.py  solve_json.py  solve_recursive.py  summarize.py  validate.py
app/agents/prompts/: GENERAR_AST.md  GENERAR_RESULT.md  LOOP_INVARIANT.md  NL_TO_CODE.md  SINTAXE.md
app/agents/prompts/iterativos/espacial/: CASO_PROMEDIO.md  MEJOR_CASO.md  PEOR_CASO.md
app/agents/prompts/iterativos/temporal/: CASO_PROMEDIO.md  MEJOR_CASO.md  PEOR_CASO.md
app/agents/tools/: tools_iterativas.py  tools_recursivas.py
app/agents/utils/: costo_lineas.py  generate_ast.py  generate_sum.py  lark.txt
app/prompts/: __init__.py  generate_pseudo.md  repair.md
app/services/: llm.py
app/services/utils/: __init__.py  normalization.py
app/tools/ast_parser/: __init__.py  ast_nodes.py  ast_parser.py  parser_agent.py
app/tools/ast_parser/grammar/: grammar.lark
app/tools/cost_model/: __init__.py  analyzer.py
app/tools/recurrence_analyzer/: __init__.py  analyzer.py
app/tools/recursion_detector/: __init__.py  detector.py
app/tools/series_solver/: __init__.py  solver.py
docs/: ARCHITECTURE.md  DOCUMENTACION_COMPLETA.md  Docs.aux  Docs.fdb_latexmk  Docs.fls  Docs.out  Docs.tex  Docs.toc  IMPLEMENTACION_RECURSIVA.md  INFORME_FINAL.md  Manual de Usuario.docx  ManualTecnico.aux  ManualTecnico.out  ManualTecnico.tex  ManualTecnico.toc
